@@ -1,4 +1,9 @@
 0.2.3
+- overhaul to mapper compilation to be deferred.  this allows mappers
+to be constructed in any order, and their relationships to each
+other are compiled when the mappers are first used..
+- fixed a pretty big speed bottleneck in cascading behavior particularly
+when backrefs were in use
 - py2.4 "set" construct used internally, falls back to sets.Set when
 "set" not available/ordering is needed.
 - "foreignkey" argument to relation() can also be a list.  fixed
